--- a/CSS/home.css
+++ b/CSS/home.css
@@ -44,7 +44,7 @@ header div{
 header div img{
     width: 100%;
     position: relative;
-    /* border:10px  brown dashed; */
+    
 }
 
 
@@ -52,7 +52,48 @@ header div img{
 
 
 
+.img1{
+    width: 100%;
+}
+.images
+{
+    display: inline-block;
+    width: 25%;
+    display: inline-flex;
+    margin-left: 75px;
+    margin-top: 100px;
+    
+}
 
+.img2{
+    
+    width: 100%;
+  
+    margin-left: 50px;
+    margin-top: 100px;
+}
+
+.img3{
+   
+    width: 100%;
+    
+    margin-left: 30px;
+    margin-top: 100px;
+}
+
+.img4{
+    
+    width: 100%;
+   
+    margin-left: 30px;
+    margin-top: 100px;
+}
+.vid{
+    width: 70%;
+    margin-left: 180px;
+    margin-top: 100px;
+    margin-bottom: 100px;
+}
 
 
 /* This is footer */
