--- a/CSS/menu.css
+++ b/CSS/menu.css
@@ -50,10 +50,23 @@ header div img{
 
 /* This is main */
 
+li {
+    font-size: x-large;
+}
+
+li span{
+    font-size: 25px;
+}
 
 
+label{
+    font-size: 20px;
+}
 
-
+li img {
+    width: 50px;
+    height: 50px;
+}
 
 /* This is footer */
 footer{
