--- a/CSS/home.css
+++ b/CSS/home.css
@@ -2,17 +2,17 @@
 header{
     font-family: 'Anton', sans-serif;
     width: 100%;
-    height: 100px;
+    height: 100%;
     background-color: #272121;
-    margin-top: -30px;
+    margin: 0 auto;
 
 }
 header h1{
-    font-size: 60px;
+    font-size: 500%;
     color: #ff0000;
-    margin-left: 60px;
-    
-    margin-top: 30px;
+    margin-left: 6%;
+    letter-spacing:5px;
+    margin-top: 1%;
 }
 header img{
    
@@ -23,20 +23,21 @@ header img{
 header nav ul{
     
      margin-top: -110px;
-     margin-left: 430px;
+     margin-left: 400px;
      
 }
 header nav ul li{
     display:inline-block;
     list-style-type: none;
- 
-     margin-left: 60px;
+    margin-top: 11px;
+     margin-left: 5%;
 }
 header nav ul li a{
     margin-right: 30px;
     color: cornsilk;
     font-size: 35px;
     text-decoration: blink;
+    letter-spacing:10px;
 }
 header div{
     height: 50%;
@@ -50,44 +51,13 @@ header div img{
 
 /* This is main */
 
-
-
 .img1{
-    width: 100%;
-}
-.images
-{
-    display: inline-block;
-    width: 25%;
-    display: inline-flex;
-    margin-left: 75px;
-    margin-top: 100px;
-    
+    width:100%;
+    height:100%;
+    margin-top: -20px;
 }
 
-.img2{
-    
-    width: 100%;
-  
-    margin-left: 50px;
-    margin-top: 100px;
-}
 
-.img3{
-   
-    width: 100%;
-    
-    margin-left: 30px;
-    margin-top: 100px;
-}
-
-.img4{
-    
-    width: 100%;
-   
-    margin-left: 30px;
-    margin-top: 100px;
-}
 .vid{
     width: 70%;
     margin-left: 180px;
@@ -96,17 +66,83 @@ header div img{
 }
 
 
+.img2{
+    width:300px;
+    height:300px;
+    
+
+}
+
+.flip-box {
+    background-color: transparent;
+    width: 300px;
+    height: 200px;
+    border: 1px solid #f1f1f1;
+    perspective: 1000px; 
+    margin-left: 60px;
+    margin-right: 40px;
+    margin-top: 100px;
+    margin-bottom: 100px;
+    display:inline-block;
+  }
+  
+  
+  .flip-box-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.8s;
+    transform-style: preserve-3d;
+  }
+  
+ 
+  .flip-box:hover .flip-box-inner {
+    transform: rotateY(180deg);
+  }
+  
+ 
+  .flip-box-front, .flip-box-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden; 
+    backface-visibility: hidden;
+  }
+  
+ 
+  .flip-box-front {
+    background-color: #bbb;
+    color: black;
+    
+  }
+  
+ 
+  .flip-box-back {
+    background-color: dodgerblue;
+    color: white;
+    transform: rotateY(180deg);
+  }
+  
+#arabianFood{
+    float: right;
+}
+
+
 /* This is footer */
 footer{
     font-family: 'Anton', sans-serif;
     width: 100%;
-    height: 100px;
+    height: 600%;
     background-color: #272121;
-    margin-top: 30px;
+    /* margin-top: 30px; */
     text-align: center;
 
 }
-footer p{
+#p{
     color: cornsilk;
+    margin-top: 40px;
+    padding: 3%;
+    letter-spacing:5px;
    
 }
