--- a/CSS/menu.css
+++ b/CSS/menu.css
@@ -231,7 +231,7 @@ section h2 {
 }
 
 #italianDish , #arabianDish , #indianDish{
-    background-image: url('https://zawles.com/wp-content/uploads/2016/04/hd-wallpapers-design-home-page-wallpaper-professional-website-backgrounds-background.jpg');
+    background-image: url('/newIMG/background2.jpg');
     background-size: cover;
     width: auto;
     height: 1600px;
