--- a/CSS/home.css
+++ b/CSS/home.css
@@ -5,14 +5,28 @@ header{
     height: 100%;
     background-color: #272121;
     margin: 0 auto;
-
+    position: fixed;
+    z-index: 6;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 67px;
+    transition-property: background-color,box-shadow,transform;
+    background:  url("https://cdn2.hubspot.net/hubfs/439788/intechnic_2017/assets/images/header-background.png") 0 0 repeat-x
+}
+#logo{
+    margin-top: -5px;
+    margin-left: 50px;
 }
 header h1{
-    font-size: 500%;
+    font-size: 250%;
     color: #ff0000;
     margin-left: 6%;
     letter-spacing:5px;
-    margin-top: 1%;
+    margin-top:0.5%;
+ 
+    
+    
 }
 header img{
    
@@ -29,13 +43,14 @@ header nav ul{
 header nav ul li{
     display:inline-block;
     list-style-type: none;
-    margin-top: 11px;
+    margin-top: 3.5%;
      margin-left: 5%;
+     
 }
 header nav ul li a{
     margin-right: 30px;
     color: cornsilk;
-    font-size: 35px;
+    font-size: 25px;
     text-decoration: blink;
     letter-spacing:10px;
     font-family: sans-serif;
@@ -69,7 +84,7 @@ header div img{
 
 .img2{
     width:300px;
-    height:300px;
+    height:200px;
     
 
 }
@@ -133,12 +148,13 @@ header div img{
 /* This is footer */
 footer{
     font-family: 'Anton', sans-serif;
-    width: 100%;
+    width: 25%;
+    margin: 0 auto;
     height: 600%;
-    background-color: #272121;
-    /* margin-top: 30px; */
+    background-color: #272121cb;
+    margin-top: 30px;
     text-align: center;
-
+    /* background:  url("https://cdn2.hubspot.net/hubfs/439788/intechnic_2017/assets/images/header-background.png") 0 0 repeat-x */
 }
 #p{
     color: cornsilk;
