--- a/CSS/home.css
+++ b/CSS/home.css
@@ -3,31 +3,43 @@ header{
     font-family: 'Anton', sans-serif;
     width: 100%;
     height: 100%;
-    background-color: #272121;
+    background-color: #635b5b21;
     margin: 0 auto;
+    margin-bottom:20px;
     position: fixed;
     z-index: 6;
     left: 0;
     top: 0;
     width: 100%;
-    height: 67px;
+    height: 75px;
     transition-property: background-color,box-shadow,transform;
     background:  url("https://cdn2.hubspot.net/hubfs/439788/intechnic_2017/assets/images/header-background.png") 0 0 repeat-x
+}
+ #linkLogo{
+    display:grid;
+    text-decoration: none;
+    width: 6px;
+    margin-top:0.5%;
+    margin-left: 6%;
 }
 #logo{
     margin-top: -5px;
     margin-left: 50px;
 }
 header h1{
-    font-size: 250%;
-    color: #ff0000;
+    font-size: 275%;
+    color: rgb(255, 9, 9);
     margin-left: 6%;
     letter-spacing:5px;
     margin-top:0.5%;
  
-    
-    
 }
+header h1:hover{
+    /* font-size: 280%; */
+    text-shadow: 2px 2px rgba(240, 234, 234, 0.849);
+
+}
+
 header img{
    
     margin-top: 25px;
@@ -50,10 +62,21 @@ header nav ul li{
 header nav ul li a{
     margin-right: 30px;
     color: cornsilk;
-    font-size: 25px;
+    font-size: 30px;
     text-decoration: blink;
     letter-spacing:10px;
     font-family: sans-serif;
+    display: inline;
+}
+header nav ul li a:hover{
+    /* font-size: 40px;
+    text-shadow: 2px 2px #FF0000; */
+    color:cornsilk ;
+    background:text #ff0000 ;
+    background-color: #ff0000;
+    box-shadow: 0 0 9px #ff0000, 0 0 35px #ff0000, 0 0 75px #ff0000;
+    transition-delay: 0.1s;
+
 }
 header div{
     height: 50%;
@@ -67,10 +90,40 @@ header div img{
 
 /* This is main */
 
+
 .img1{
     width:100%;
-    height:100%;
+    background-size: cover;
+    height:600px;
     margin-top: -20px;
+   
+    filter: blur(3px);
+    -webkit-filter: blur(3px);
+}
+
+.container {
+    position: relative;
+    text-align: center;
+    
+  }
+  .para{
+  position: absolute;
+  bottom:5%;
+  left: -10%;
+  margin-left: 15%;
+  margin-right: 15%;
+  
+}
+#para{
+    color: rgb(255, 251, 251);
+    text-shadow: 0 0 9px #ff00006e;
+    font-size: 400%;
+    text-align: center;
+    /* border:5px solid rgb(180, 38, 38); */
+    padding: 35px;
+    /* font-family: 'Kaushan Script', cursive; */
+    font-family: 'Archivo Black', sans-serif;
+    box-shadow: 0 0 9px #ff000048;
 }
 
 
@@ -83,22 +136,22 @@ header div img{
 
 
 .img2{
-    width:300px;
-    height:200px;
+    width:400px;
+    height:250px;
     
 
 }
 
 .flip-box {
     background-color: transparent;
-    width: 300px;
-    height: 200px;
+    width: 400px;
+    height: 250px;
     border: 1px solid #f1f1f1;
     perspective: 1000px; 
-    margin-left: 60px;
-    margin-right: 40px;
+     margin-left: 30px;
+    /* margin-right: 20px;*/
     margin-top: 100px;
-    margin-bottom: 100px;
+    margin-bottom: 50px;  
     display:inline-block;
   }
   
@@ -135,9 +188,15 @@ header div img{
   
  
   .flip-box-back {
-    background-color: dodgerblue;
-    color: white;
+    background-color:#ddd8d87e;
+    color: #ff0000;     
     transform: rotateY(180deg);
+    margin-left: 2px;
+    margin-right: 2px;
+    text-align: center;
+    font-family:  sans-serif;
+    font-size: larger;
+    
   }
   
 #arabianFood{
@@ -151,7 +210,7 @@ footer{
     width: 25%;
     margin: 0 auto;
     height: 600%;
-    background-color: #272121cb;
+    background-color: #27212170;
     margin-top: 30px;
     text-align: center;
     /* background:  url("https://cdn2.hubspot.net/hubfs/439788/intechnic_2017/assets/images/header-background.png") 0 0 repeat-x */
@@ -159,7 +218,8 @@ footer{
 #p{
     color: cornsilk;
     margin-top: 40px;
-    padding: 3%;
-    letter-spacing:5px;
+    padding: 5%;
+    letter-spacing: 2px;
    
 }
+
