--- a/CSS/menu.css
+++ b/CSS/menu.css
@@ -6,7 +6,7 @@ header{
     background-color: #0e0e0f21;
     margin: 0 auto;
     /* margin-bottom:20px; */
-    /* position: fixed; */
+    position: fixed;
     z-index: 6;
     left: 0;
     top: 0;
@@ -76,6 +76,11 @@ header nav ul li a:hover{
     background-color: #ff0000;
     box-shadow: 0 0 9px #ff0000, 0 0 35px #ff0000, 0 0 75px #ff0000;
     transition-delay: 0.1s;
+    
+   
+    /* box-shadow: rgba(230, 13, 13, 0.26); */
+    /* border-style: double; */
+
 
 }
 header div{
@@ -94,7 +99,7 @@ main{
 }
 .main-img{
     width: 100%;
-   
+   margin-top: 5.6%;
       height: 200px;
    
 
@@ -103,7 +108,7 @@ main{
      background-size: 1333px ;
      
      
-    animation: slide1 60s infinite;
+    animation: slide1 30s infinite;
 }
 @keyframes slide1 {
     0%{background-position: 0 0%;}
@@ -112,30 +117,10 @@ main{
 }
 
 
-
 /* ////////////////////////////////////////////////////// DONE */
 
 
  
-<<<<<<< HEAD
-#italianDish  span{
-    margin-right: 150px;
-    margin-left: 0;
-}
-#indianDish  span{
-    margin-right: 500px;
-    margin-left: -32%;
-}
-        #arabianDish  span{
-            margin-right: 481px;
-            margin-left: -34%
-        }
-
-#italianDish img{
-    margin-right: 150px;
-    margin-left:10%;
-   margin-bottom: 1%;
-=======
 
 /* #italianDish img{
     margin-right: 140px;
@@ -150,24 +135,10 @@ main{
 #indianDish  span{
     margin-right: 30px;
     margin-left:-13%;
->>>>>>> e47e8526c7e0f4f6d7bf5c7e48a9386285b7e469
 }
 
 
 #indianDish img{
-<<<<<<< HEAD
-    margin-right: 150px;
-    margin-left:10%;
-   margin-bottom: 5%;
-}
-
-#arabianDish img{
-    margin-right: 150px;
-    margin-left:10%;
-   margin-bottom: 5%;
-} 
- 
-=======
     margin-right: 140px;
     margin-left:-1%;
    margin-bottom: -1%;
@@ -185,16 +156,24 @@ main{
 /* #span2{
     margin-left: -115px;
 } */
->>>>>>> e47e8526c7e0f4f6d7bf5c7e48a9386285b7e469
 
 
 
 #italianDish ,#indianDish ,#arabianDish {
 
-margin-left:px ;
+margin-left:150px ;
+/* margin-top: -150px; */
 }
 
+#italianDish img,#indianDish img ,#arabianDish img {
+    /* margin-left: 800px; */
 
+    /* margin-bottom: 200px; */
+    /* margin-top: -150px; */
+    
+    /* width: 25%;
+    height: 25%; */
+}
 
 img{
     margin: 90px;
@@ -262,18 +241,17 @@ section button {
 
 #uniqLogo{
 
-    /* width:220px; height:200px; margin:5% auto; background: rgb(114, 114, 114);  */
+    
    
     background: -webkit-linear-gradient(top, rgb(233, 9, 9) 0%,rgb(179, 45, 45) 35%,rgb(168, 132, 132) 70% ,rgba(255, 6, 6, 0.788) 65%,rgb(170, 165, 165) 100%); 
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffd65e', endColorstr='#febf04'   );
     margin-left: 1070px;
     position: fixed;
     margin-top: -100px;
+    opacity: 0.5;
     }
     
-/* .ribbon-wrapper {
-	position: relative;z-index:998;
-} */
+
   .ribbon-front {
 	background-color: #cc3333;	height: 50px;
 	width: 240px;
@@ -283,39 +261,55 @@ section button {
 }
 
 
-@-webkit-keyframes flow {
-	/* 0% { left:-20px;opacity: 0;} */
-	/* 50% {left:100px;opacity: 0.3;} */
-    /* 100%{ left:180px;opacity: 0;} */
-}
-@keyframes flow {
-	/* 0% { left:-20px;opacity: 0;} */
-	/* 50% {left:100px;opacity: 0.3;} */
-    /* 100%{ left:180px;opacity: 0;} */
-} 
+
 
 
 
 .firstButton , .seconButton , .thirdButton{
-    margin-left: 600px;
+    margin-left: 50%;
+    padding-left: 1%;
+    padding: 0.08%;
     background-color: rgb(173, 107, 107);
 }
 
 .firstButton span , .seconButton span, .thirdButton span{
-      
     display: inline-block;
     padding: 10px 20px 20px 10px;
-   
     border-radius: 50%;
     width: 15px;
     height: 15px;
     background-image: url("https://c8.alamy.com/comp/EPWMJ5/illustration-of-green-plus-icon-on-white-background-EPWMJ5.jpg");
-    
-    background-size: cover;
-    
-    
+    background-size: cover;    
+}
+
+
+
+#italian h2,#indian h2,#arabian h2 {
+    font-family: 'Bowlby One SC', cursive;
+    font-size: 150%;
+    background-color:  #c10000;
+    color: #dedede;
+    text-align: center;
+    display: inline-block;
+    margin: 0 auto;
+    margin-left: 35%;
+    margin-right: 25%;
+    margin-bottom: 5%;
+    margin-top: 5%;
+    text-shadow:6px 6px 15px black;
+    letter-spacing: 10px;
+    padding-left: 2.5%;
+    padding-right: 1.5%;
+    border-radius: 30%;
     
 }
+
+#italian span,#indian span,#arabian span {
+    font-family: 'Fredoka One', cursive;
+    margin-right: 10px;
+    margin-left:1%; 
+}
+
 
 
 
