--- a/CSS/oreder.css
+++ b/CSS/oreder.css
@@ -2,7 +2,7 @@
 header{
     font-family: 'Anton', sans-serif;
     width: 100%;
-    height: 100px;
+    height: 150px;
     background-color: #272121;
     margin-top: -30px;
 
@@ -68,4 +68,41 @@ footer{
 footer p{
     color: cornsilk;
    
+}
+
+.menuJS{
+width: 100%;
+height: 500px;
+margin-top: 150px;
+background-color: black;
+color: red;
+text-align: center;
+padding-top: 150px;
+}
+
+.map{
+border:5px solid red;
+margin-top: 100px;
+width: 100%;
+height: 50%;
+}
+
+.map h3{
+    text-align: center;
+    font-family: 'Pragati Narrow', sans-serif;
+    font-size: 25px;
+    word-spacing: 3px;
+}
+
+#map{
+    border:5px solid red;
+    border-radius: 10%;
+    float: left;
+}
+
+.newForm{
+    border :3px solid yellow;
+    width: 50%;
+    height: 500px;
+    margin-left: 620px;
 }
