--- a/CSS/about-us.css
+++ b/CSS/about-us.css
@@ -86,122 +86,7 @@ header div img{
     position: relative;
     
 }
-
-
-/* This is main */
-
-
-.img1{
-    width:100%;
-    background-size: cover;
-    height:600px;
-    margin-top: -20px;
-   
-    filter: blur(3px);
-    -webkit-filter: blur(3px);
-}
-
-.container {
-    position: relative;
-    text-align: center;
-    
-  }
-  .para{
-  position: absolute;
-  bottom:5%;
-  left: -10%;
-  margin-left: 15%;
-  margin-right: 15%;
-  
-}
-#para{
-    color: rgb(255, 251, 251);
-    text-shadow: 0 0 9px #ff00006e;
-    font-size: 400%;
-    text-align: center;
-    /* border:5px solid rgb(180, 38, 38); */
-    padding: 35px;
-    /* font-family: 'Kaushan Script', cursive; */
-    font-family: 'Archivo Black', sans-serif;
-    box-shadow: 0 0 9px #ff000048;
-}
-
-
-.vid{
-    width: 70%;
-    margin-left: 180px;
-    margin-top: 100px;
-    margin-bottom: 100px;
-}
-
-
-.img2{
-    width:400px;
-    height:250px;
-    
-
-}
-
-.flip-box {
-    background-color: transparent;
-    width: 400px;
-    height: 250px;
-    border: 1px solid #f1f1f1;
-    perspective: 1000px; 
-     margin-left: 30px;
-    /* margin-right: 20px;*/
-    margin-top: 100px;
-    margin-bottom: 50px;  
-    display:inline-block;
-  }
-  
-  
-  .flip-box-inner {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    transition: transform 0.8s;
-    transform-style: preserve-3d;
-  }
-  
- 
-  .flip-box:hover .flip-box-inner {
-    transform: rotateY(180deg);
-  }
-  
- 
-  .flip-box-front, .flip-box-back {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    -webkit-backface-visibility: hidden; 
-    backface-visibility: hidden;
-  }
-  
- 
-  .flip-box-front {
-    background-color: #bbb;
-    color: black;
-    
-  }
-  
- 
-  .flip-box-back {
-    background-color:#ddd8d87e;
-    color: #ff0000;     
-    transform: rotateY(180deg);
-    margin-left: 2px;
-    margin-right: 2px;
-    text-align: center;
-    font-family:  sans-serif;
-    font-size: larger;
-    
-  }
-  
-#arabianFood{
-    float: right;
-}
+/*this is main
 
 
 /* This is footer */
@@ -222,4 +107,3 @@ footer{
     letter-spacing: 2px;
    
 }
-
